--- a/app/Resources/views/listProf.html.twig
+++ b/app/Resources/views/listProf.html.twig
@@ -26,7 +26,7 @@
                               <a href="{{ path('editProf', { 'id': profesor.id }) }}">Uredi</a>
                            </li>
                            <li class="list-inline-item">                              
-                              <button type="button" class="btn btn-danger"><a href="{{ path('deleteProf', { 'id': profesor.id }) }}">Delete</a></button>
+                              <a href="{{ path('deleteProf', { 'id': profesor.id }) }}">Delete</a>
                            </li>                                                     
                         </ul>
                      </td>
