--- a/app/Resources/views/editStudent.html.twig
+++ b/app/Resources/views/editStudent.html.twig
@@ -1,17 +1,42 @@
-{% extends 'base.html.twig' %}
-
-{% block body %}
-
+ {% extends 'base.html.twig' %} {% block body %}
 <div class="container">
-<div class="col-md-6 col-md-offset-4">
     <div class="row">
-        <h1>Uredi studenta</h1>
-
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}   
+        <div class="col-md-8 col-md-offset-2">
+            <div class="panel panel-default">
+                <div class="panel-heading">Uredi studenta</div>
+                <div class="panel-body">
+                    {{ form_start(edit_form) }}
+                    <div class="form_group">
+                        <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(edit_form.name, {'label' : 'Ime i prezime','attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+                    <div class="form_group">
+                        <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(edit_form.email, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+                    <div class="form_group">
+                        <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(edit_form.plainPassword.first, {'label' : 'Lozinka','attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+                    <div class="form_group">
+                        <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(edit_form.plainPassword.second, {'label' : 'Ponovite lozinku','attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fa fa-btn fa-user"></i> Uredi studenta
+                            </button>
+                        </div>
+                    </div>
+                    {{ form_end(edit_form) }}
+                </div>
+            </div>
+        </div>
     </div>
-</div></div>
-    
+</div>
 {% endblock %}
