--- a/app/Resources/views/zivotopisi.html.twig
+++ b/app/Resources/views/zivotopisi.html.twig
@@ -6,13 +6,13 @@
    <div class="row">
       <div class="col-md-10 col-md-offset-1">
          <div class="panel panel-success">
-            <div class="panel-heading text-center">Studenti</div>
+            <div class="panel-heading text-center">Životopisi</div>
             <table class="table">
                <thead>
                   <tr>
                      <th class="hidden">Id</th>
-                     <th>Ime</th>
-                     <th>Akcije</th>
+                     <th>Ime i prezime</th>
+                     <th></th>
                   </tr>
                </thead>
                <tbody>
@@ -23,11 +23,8 @@
                      <td>
                         <ul class="list-inline">
                            <li class="list-inline-item">                              
-                              <a href="{{ path('editStudent', { 'id': student.id }) }}">Uredi</a>
-                           </li>
-                           <li class="list-inline-item">                              
-                              <a href="{{ path('deleteStudent', { 'id': student.id }) }}">Briši</a>
-                           </li>                                                     
+                              <a href="{{ path('zivotopisDetalji', { 'id': student.id }) }}">Detalji</a>
+                           </li>                                                                              
                         </ul>
                      </td>
                   </tr>
