napravljen filter studenata

--- a/app/Resources/views/editProf.html.twig
+++ b/app/Resources/views/editProf.html.twig
@@ -17,7 +17,7 @@
                         </div>
                         <div class="form_group">
                             <div class="col-md-8 col-md-offset-2">
-                                {{ form_row(edit_form.smijer, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_row(edit_form.smijer, {'label' : 'Smjer','attr': {'class': 'form-control'}}) }}
                             </div>
                         </div>
                     </div>
