--- a/app/Resources/views/addNovost.html.twig
+++ b/app/Resources/views/addNovost.html.twig
@@ -7,7 +7,7 @@
 
     <div class="col-md-8 col-md-offset-2">
         <div class="panel panel-default">
-          <div class="panel-heading">Dodavanje dovosti</div>
+          <div class="panel-heading">Dodavanje novosti</div>
           <div class="panel-body">
             {{ form_start(form) }}
             <div class="form_group">
