--- a/app/Resources/views/auth/addStudent.html.twig
+++ b/app/Resources/views/auth/addStudent.html.twig
@@ -21,6 +21,11 @@
                 {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
                 </div>
             </div>
+            <div class="form_group">
+                        <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(form.smijer, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+            </div>
 
             <div class="form_group">
                 <div class="col-md-8 col-md-offset-2">
