--- a/app/Resources/views/auth/login.html.twig
+++ b/app/Resources/views/auth/login.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <div class="panel panel-default">
-                <div class="panel-heading">Login</div>
+                <div class="panel-heading">Prijava</div>
                 <div class="panel-body">
                     <form class="form-horizontal" role="form" method="POST" action="{{ path('security_login_check') }}">
                         {% if error %}
@@ -17,7 +17,7 @@
                         {% endif %}
 
                         <div class="form-group">
-                            <label for="email" class="col-md-4 control-label">E-Mail Address</label>
+                            <label for="email" class="col-md-4 control-label">E-mail adresa</label>
 
                             <div class="col-md-6">
                                 <input id="email" type="email" class="form-control" name="_email" value="{{ last_username }}">
@@ -25,7 +25,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="password" class="col-md-4 control-label">Password</label>
+                            <label for="password" class="col-md-4 control-label">Lozinka</label>
 
                             <div class="col-md-6">
                                 <input id="password" type="password" class="form-control" name="_password">
@@ -35,7 +35,7 @@
                         <div class="form-group">
                             <div class="col-md-6 col-md-offset-4">
                                 <button type="submit" class="btn btn-primary">
-                                    <i class="fa fa-btn fa-sign-in"></i> Login
+                                    <i class="fa fa-btn fa-sign-in"></i> Prijava
                                 </button>
                             </div>
                         </div>
