--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -89,7 +89,7 @@
 
                         <ul class="dropdown-menu" role="menu">
 
-                            <li><a href="/logout"><i class="fa fa-btn fa-sign-out"></i>Logout</a></li>
+                            <li><a href="/logout"><i class="fa fa-btn fa-sign-out"></i>Odjava</a></li>
                         </ul>
                     </li>
                     {% elseif is_granted("ROLE_STUDENT")%}
@@ -107,7 +107,7 @@
                         </ul>
                     </li>
                     {% else %}
-                    <li><a href="/login">Login</a></li>
+                    <li><a href="/login">Prijava</a></li>
                     {% endif %}
                 </ul>
             </div>
