--- a/app/Resources/views/editProfile.html.twig
+++ b/app/Resources/views/editProfile.html.twig
@@ -14,8 +14,11 @@
                   </div>
                   <div class="form_group">
                      <div class="col-md-8 col-md-offset-2">
-                        {{ form_row(edit_form.email, {label:'Email','attr': {'class': 'form-control'}}) }}
+                        {{ form_row(edit_form.email, {label:'E-mail','attr': {'class': 'form-control'}}) }}
                      </div>
+                  </div>
+                  <div class="col-md-8 col-md-offset-2">
+                     {{ form_row(edit_form.smijer, {label:'Smjer','attr': {'class': 'form-control'}}) }}
                   </div>
                   <div class="col-md-8 col-md-offset-2">
                      {{ form_row(edit_form.address, {label:'Adresa','attr': {'class': 'form-control'}}) }}
@@ -25,7 +28,7 @@
                         {{ form_row(edit_form.zip, {label:'Poštanski broj','attr': {'class': 'form-control'}}) }}
                      </div>
                   </div> 
-                  <div class="col-md-8 col-md-offset-2">
+                  <div class="col-md-offset-2-md-8 col-md-offset-2">
                      {{ form_row(edit_form.grad, {label:'Grad','attr': {'class': 'form-control'}}) }}
                   </div>
                   <div class="form_group">
@@ -58,7 +61,7 @@
                <div class="form-group">
                 <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
                     <button type="submit" class="btn btn-primary">
-                        <i class="fa fa-btn fa-user"></i> Uredi profil
+                        <i class="fa fa-btn glyphicon glyphicon-pencil"></i> Uredi profil
                     </button>
                 </div>
             	</div>
