--- a/app/Resources/views/zivotopisi.html.twig
+++ b/app/Resources/views/zivotopisi.html.twig
@@ -3,7 +3,42 @@
 {% block body %}
 
 <div class="container">
+    
    <div class="row">
+      <div class="panel-body">
+                    {{ form_start(form) }}
+                    <div class="form_group">
+                        <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(form.name, {'label' : 'Ime i prezime','attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+                    <div class="form_group">
+                        <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(form.grad, {'label' : 'Grad','attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>   
+                    <div class="form_group">
+                            <div class="col-md-8 col-md-offset-2">
+                                {{ form_row(form.obrazovanje, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
+                    <div class="form_group">
+                            <div class="col-md-8 col-md-offset-2">
+                                {{ form_row(form.smijer, {'label' : 'Smjer','attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>                 
+                    <div class="form-group">
+                        <div class="col-md-8 col-md-offset-2" style="margin-top:5px;">
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fa fa-btn glyphicon glyphicon-search"></i> Traži
+                            </button>
+                        </div>
+                    </div>
+
+                    {{ form_end(form) }}
+                </div>
+
+      
       <div class="col-md-10 col-md-offset-1">
          <div class="panel panel-success">
             <div class="panel-heading text-center">Životopisi</div>
