--- a/app/Resources/views/editStudent.html.twig
+++ b/app/Resources/views/editStudent.html.twig
@@ -23,9 +23,15 @@
                     </div>
                     <div class="form_group">
                         <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(edit_form.mentor, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+                    <div class="form_group">
+                        <div class="col-md-8 col-md-offset-2">
                             {{ form_row(edit_form.plainPassword.first, {'label' : 'Lozinka','attr': {'class': 'form-control'}}) }}
                         </div>
                     </div>
+
                     <div class="form_group">
                         <div class="col-md-8 col-md-offset-2">
                             {{ form_row(edit_form.plainPassword.second, {'label' : 'Ponovite lozinku','attr': {'class': 'form-control'}}) }}
