--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -84,7 +84,7 @@
                     <li><a href="/profesor/addstudent">Dodaj studenta</a></li>
                     <li><a href="/profesor/ListStudent">Lista studenata</a></li>
                     <li><a href="/profesor/dodajNovost">Dodaj novost</a></li>
-                    <li><a href="/student/novosti">Novosti</a></li>
+                    <li><a href="/profesor/ListNovosti">Novosti</a></li>
                     <li style="margin-top: 15px;">{{app.user.email}}</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
